Fix styling for mobile and center align on desktop

--- a/static/index.css
+++ b/static/index.css
@@ -4,8 +4,8 @@ html, body, .header {
 }
 
 html, body {
-    min-height: 100%;
-    overflow: initial !important;
+  min-height: 100%;
+    /** overflow: initial !important; **/
 }
 
 body {
@@ -15,7 +15,7 @@ body {
   font-size: 20px;
   color: #333333;
   background-color: white;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 img {
@@ -26,8 +26,8 @@ img {
   /** box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05) !important; **/
   box-shadow: 0 2px 6px 0 rgba(0,0,0,.12), inset 0 -1px 0 0 #dadce0;
   padding: 1em;
-  position: fixed;
-  width: 100%;
+  /** position: fixed; **/
+  /** width: 100%; **/
   top: 0;
   background-color: white;
 }
@@ -37,12 +37,15 @@ main {
     margin: auto;
     /** padding: 2em; **/
     position: absolute;
-    width: 100%;
+    /** width: 100%; **/
     overflow-y: scroll;
-    overflow-x: hidden;
+    /** overflow-x: hidden; **/
     top: 64px;
-    bottom: 0;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
     outline: none;
+    /** background-color: white; **/
 }
 
 /**
@@ -56,7 +59,7 @@ main,
 .header .navigation {
   float: right;
   color: #555;
-  margin-right: 1em;
+  /** margin-right: 1em; **/
 }
 
 .header .title {
@@ -142,10 +145,12 @@ main {
 
 footer {
   text-align: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #f8f9fa;
+  margin-top: 2em;
+  /** padding-bottom: 30px; **/
   border-top: 1px solid #dadce0;
+  height: 4em;
+  bottom: 0px;
+  background-color: #f8f9fa;
 }
 
 /**
@@ -191,9 +196,10 @@ footer {
   color: rgba(0,0,0,.84);
   display: inline-block;
   margin: auto;
-  margin-left: 20%;
+  /** margin-left: 20%; **/
   /** width: 70%; **/
   /** min-width: 700px; **/
+  display: inline;
 }
 
 .char {
@@ -209,7 +215,7 @@ footer {
   letter-spacing: 0.5px;
   text-align: left;
   font-size: 16px;
-  /** margin-left: -6em; **/
+  margin-left: -24em;
   float: left;
   width: 24em;
   position: fixed;
@@ -230,7 +236,7 @@ footer {
   font-size: 3rem;
   margin: 1rem 0;
   text-align: left;
-  margin-left: 8em;
+  /** margin-left: 8em; **/
   margin-bottom: 1em;
 }
 
@@ -247,8 +253,8 @@ footer {
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
-  margin-left: 24em;
-  width: 40em;
+  /** margin-left: 24em; **/
+  /** width: 50em; **/
 }
 
 .highlight {
@@ -274,8 +280,12 @@ blockquote {
 }
 
 .doc {
-  max-width: unset !important;
-  padding: unset !important;
+  /** max-width: unset !important; **/
+  /** padding: unset !important; **/
+  width: 40%;
+  margin: 0 auto;
+  padding-top: 2em;
+  padding-bottom: 4em;
 }
 
 code {
@@ -340,9 +350,13 @@ table tr:nth-child(2n) {
 
 @media only screen and (max-width: 600px) {
   main {
-    padding: 1em;
     /** padding-top: 6em; **/
     width: unset;
+  }
+  .doc {
+    padding: 1em;
+    width: unset;
+    margin: unset;
   }
   .post {
     padding: 0;
